Add styles for  burger menu

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -200,3 +200,70 @@
         padding: 42px 0 41px;
     }
 }
+
+.rightside-menu {
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    max-width: 694px;
+    width: 100%;
+    background-color: #ffffff;
+    padding-top: 40px;
+    box-shadow: -2px 3px 17px 0px #000;
+    transition: all .5s;
+
+    &.rightside-menu--close {
+        transform: translateX(500%);
+    }
+
+    &__close {
+        background-color: transparent;
+        border: none;
+        padding: 0;
+        cursor: pointer;
+        margin-left: 50px;
+        margin-bottom: 60px;
+    }
+
+    &__logo {
+        margin-bottom: 40px;
+        display: inline-block;
+    }
+
+    &__title {
+        color: $black;
+        @extend %title-font;
+        font-size: 36px;
+        line-height: 51px;
+        position: relative;
+        margin-bottom: 17px;
+        padding-bottom: 17px;
+
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            max-width: 252px;
+            margin: 0 auto;
+            left: 0;
+            right: 0;
+            height: 1px;
+            background-color: #607278;
+        }
+    }
+
+    &__text {
+        margin-bottom: 75px;
+    }
+
+    &__images {
+        max-width: 485px;
+    }
+
+    &__content {
+        text-align: center;
+        max-width: 485px;
+        margin: 0 auto;
+    }
+}
