--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -24,11 +24,38 @@ body {
 .footer {
 	flex: 0 0 auto;
 }
+.container-fluid{
+	max-width: 1920px;
+	margin: 0 auto;
+	padding: 0 10px;
+}
 
 .container{
   max-width: 1140px;
   margin: 0 auto;
   padding: 0 15px;
+}
+.slick-dots{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	li{
+		padding: 0 15px;
+	}
+	button{
+		background-color: $black;
+		border: none;
+		width: 8px;
+		height: 8px;
+		border-radius: 50%;
+		padding: 0;
+		font-size: 0;
+	}
+	li.slick-active{
+		button{
+			background-color: #ffef35;
+		}
+	}
 }
 
 
