--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -44,6 +44,23 @@
         color: $initial-color;
         line-height: 22px;
     }
+
+    &__list-link--active {
+        padding-bottom: 4px;
+        position: relative;
+
+        &::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            height: 2px;
+            border-radius: 1px;
+            background-color: rgba($black, .7);
+
+        }
+    }
 }
 
 .footer {
@@ -269,6 +286,30 @@
     }
 }
 
+.breadcrumbs {
+    background: rgba(#dfdfdf, .5);
+    padding: 13px 14px;
+
+    &__item::after {
+        content: '/';
+        margin-left: -4px;
+        margin-right: 4px;
+    }
+
+    &__item:last-child::after {
+        display: none;
+    }
+
+    &__list {
+        display: flex;
+    }
+
+    &__link {
+        font-size: 14px;
+        color: $default;
+    }
+}
+
 .top {
     &__inner {
         padding-bottom: 70px;
@@ -333,7 +374,7 @@
 
 .new-collection {
     text-align: center;
-    padding: 45px 0 105px;
+    padding: 45px 0 35px;
 
     &__title {
         color: $black;
@@ -368,6 +409,7 @@
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-gap: 30px;
+    padding-bottom: 70px;
 
     &__item {
         position: relative;
@@ -434,6 +476,7 @@
     background-image: url(../images/decor-bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+
     &__title {
         @extend %title-font;
         color: $black;
@@ -642,4 +685,160 @@
         @extend %title-font;
     }
 
+}
+
+.about {
+    &__prev {
+        background-image: url(../images/about-bg.jpg);
+        background-repeat: no-repeat;
+        background-position: top center;
+        background-size: cover;
+        text-align: center;
+        padding: 160px 0;
+        margin-top: -53px;
+    }
+
+    &__prev-title {
+        color: $black;
+        @extend %title-font;
+        font-size: 60px;
+        line-height: 80px;
+    }
+
+    &__content {
+        padding: 130px 0 40px;
+
+    }
+
+    &__title {
+        color: $black;
+        @extend %title-font;
+        font-size: 36px;
+        line-height: 60px;
+        padding-bottom: 22px;
+        margin-bottom: 22px;
+        position: relative;
+
+        &::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 200px;
+            height: 1px;
+            background-color: #6d7278;
+        }
+    }
+
+    &__text {
+        padding-left: 284px;
+
+        p {
+            margin-bottom: 30px;
+        }
+    }
+
+    &__popup {
+        background-image: url(../images/popup-bg.jpg);
+        background-repeat: no-repeat;
+        background-position: top center;
+        background-size: cover;
+        min-height: 414px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+.inspiration {
+    padding-top: 100px;
+    position: relative;
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-image: url(../images/inspiration-bg.jpg);
+        height: 362px;
+        z-index: -1;
+    }
+
+    &__inner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__images {
+        margin-right: 78px;
+        margin-left: -230px;
+    }
+
+    &__title {
+        font-size: 36px;
+        line-height: 60px;
+        @extend %title-font;
+        color: $black;
+        padding-bottom: 16px;
+        margin-bottom: 24px;
+        position: relative;
+
+        &::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            background-color: #6d7278;
+            width: 200px;
+            height: 1px;
+        }
+    }
+
+    &__text {
+        margin-bottom: 30px;
+
+    }
+
+    &__content {
+        max-width: 825px;
+
+    }
+
+    &__item {
+        color: $black;
+        @extend %title-font;
+        line-height: 23px;
+        margin-bottom: 33px;
+
+    }
+
+    &__item-content {
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 14px;
+        border-bottom: 2px solid #ffffff;
+        border-radius: 4px;
+    }
+
+    &__line {
+        height: 2px;
+        border-radius: 4px;
+        background-color: $black;
+        margin-top: -2px;
+    }
+}
+
+.partners {
+    padding: 16px 0 60px;
+
+    &__items {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+    }
+
+    &__item {
+        margin: 0 auto;
+    }
 }
