Master feat (styles for gallery)

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -595,6 +595,17 @@
 .gallery {
     padding: 80px 0 90px;
 
+    &.gallery-page {
+        .gallery__item img {
+            max-height: 1165px;
+        }
+
+        .gallery__item:nth-child(8) {
+            grid-column: span 2;
+            grid-row: span 2;
+        }
+    }
+
     &__buttons {
         text-align: center;
         margin-bottom: 40px;
